# dart-labs

./: index.html  lefthook.yml  setup-remotes.bat  setup-remotes.sh
.claude/: code-review-state.json
.githooks/: prepare-commit-msg
.github/ISSUE_TEMPLATE/: subproject_issue.yml
.github/workflows/: deploy-cacheman.yml  deploy-countman.yml  deploy-demo.yml  deploy-dioman.yml  deploy-ffuzzy.yml  deploy-getx-query.yml  deploy-index.yml  deploy-layerman.yml  deploy-pages.yml  deploy-stompsocket.yml  update-root-index.yml  validate-issue-title.yml
cacheman/: .flutter-plugins-dependencies  .gitignore  .last_build_id  ARCHITECTURE.md  CHANGELOG.md  README.md  README.zh-CN.md  flutter_bootstrap.js  index.html  main.dart.js  pubspec.yaml  version.json
cacheman/assets/: NOTICES
cacheman/example/: README.md  cacheman_example.dart  pubspec.yaml
cacheman/lib/: cacheman.dart
cacheman/test/: cacheman_test.dart
countman/: .last_build_id  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  LICENSE  README.md  README.zh.md  flutter_bootstrap.js  index.html  main.dart.js  pubspec.yaml
countman/assets/: NOTICES
countman/example/: pubspec.yaml
countman/lib/: countman.dart
countman/test/: animated_counter_test.dart  api_expansion_test.dart  bar_test.dart  core_test.dart  countdown_card_test.dart  countdown_test.dart  counter_direction_test.dart  counter_pause_test.dart  counter_test.dart  countup_test.dart  elapsed_test.dart  fast_mode_test.dart  plugin_base_test.dart  review_fixes_test.dart  ring_geometry_test.dart  ring_test.dart  style_test.dart  widgets_test.dart
dioman/: .last_build_id  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  flutter_bootstrap.js  index.html  main.dart.js  manifest.json  pubspec.yaml  version.json
dioman/assets/: NOTICES
dioman/example/: dioman_example.dart  pubspec.yaml  real_run.dart
dioman/lib/: dioman.dart
dioman/test/: dioman_combinations_test.dart  dioman_coverage_test.dart  dioman_powerset_test.dart  dioman_test.dart
dioplus/: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pubspec.yaml
dioplus/example/: dioplus_example.dart
dioplus/lib/: dioplus.dart
ffuzzy/: .gitignore  .last_build_id  .pubignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  README.zh-CN.md  build_test.bat  build_test_dll.bat  flutter_bootstrap.js  index.html  main.dart.js  pubspec.yaml  version.json
ffuzzy/.claude/skills/ffuzzy-plugin/: SKILL.md
ffuzzy/.github/workflows/: ci.yml
ffuzzy/android/: build.gradle
ffuzzy/assets/: NOTICES
ffuzzy/docs/: INTERNALS.md
ffuzzy/docs/superpowers/plans/: 2026-06-27-scoring-mode.md
ffuzzy/docs/superpowers/specs/: 2026-06-27-scoring-mode-design.md
ffuzzy/example/: README.md  pubspec.yaml
ffuzzy/example/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ffuzzy/example/lib/: demo_data.dart  main.dart
ffuzzy/example/lib/tabs/: async_lifecycle_cards.dart  async_specs.dart  async_tab.dart  mutation_cards.dart  mutation_tab.dart  raws_specs.dart  search_modes_specs.dart  shared_query_tab.dart  static_tab.dart  utility_tab.dart
ffuzzy/example/lib/widgets/: demo_card.dart
ffuzzy/example/linux/flutter/: generated_plugins.cmake
ffuzzy/example/test/: widget_test.dart
ffuzzy/example/web/: index.html  manifest.json
ffuzzy/ffi/: ffz_crash.c  ffz_ffi.c
ffuzzy/include/: ffz.h  ffz_alloc.h  ffz_class.h  ffz_corpus.h  ffz_crash.h  ffz_unicode.h
ffuzzy/ios/: ffuzzy.podspec
ffuzzy/lib/: ffuzzy.dart
ffuzzy/lib/src/: ffuzzy_corpus.dart  ffuzzy_ffi.dart  ffuzzy_types.dart  ffuzzy_web.dart  ffuzzy_web_plugin.dart
ffuzzy/linux/: CMakeLists.txt
ffuzzy/macos/: ffuzzy.podspec
ffuzzy/scripts/: bench_native.dart  build-wasm.sh  build_android.sh  check_api_parity.dart  crash_smoke.c  ffi_smoke.dart  gen_unicode_tables.py
ffuzzy/src/: ffz_alloc.c  ffz_chars.c  ffz_class_table.c  ffz_corpus.c  ffz_edit.c  ffz_fuzzy.c  ffz_internal.h  ffz_match.c  ffz_pattern.c  ffz_prefilter.c  ffz_score.c  ffz_string.c  ffz_unicode_tables.c
ffuzzy/test/: api_parity_test.dart  approx_test.dart  bench_native_test.dart  corpus_mutation_test.dart  fuzz_ffz.c  shared_spec_test.dart  test_ffz.c  test_leak.c
ffuzzy/test/shared/: api_surface.json  spec.json
ffuzzy/tests/: test_leak.c
ffuzzy/wasm/: README.md  README.zh-CN.md  build-engine.sh  build.mjs  ffuzzy-corpus.mjs  ffuzzy-lite.d.ts  ffuzzy-lite.engine.mjs  ffuzzy-lite.js  ffuzzy.js  lite-tables.c  package-lock.json  package.json  tsconfig.json  tsdown.config.ts
ffuzzy/wasm/bench/: diag.mjs  perf.mjs  prefix.mjs  scale.mjs  sustained.mjs  vs-fusejs.mjs  vs-fuzzysort.mjs
ffuzzy/wasm/scripts/: check_api_parity.mjs
ffuzzy/wasm/src/: ffuzzy-corpus.ts  ffz-approx.mjs  ffz-full.mjs  ffz-fzf.mjs  ffz.mjs
ffuzzy/wasm/test/: api_parity.test.mjs  shared_spec.test.mjs  smoke.test.mjs
ffuzzy/windows/: CMakeLists.txt
flutter_stompsocket/: ARCHITECTURE.md  CHANGELOG.md  README.md  README.zh-CN.md  pubspec.yaml
flutter_stompsocket/example/: README.md  flutter_stompsocket_example.dart  pubspec.yaml
flutter_stompsocket/lib/: flutter_stompsocket.dart
flutter_stompsocket/test/: flutter_stompsocket_test.dart  stomp_test_broker.dart
getquery/: CHANGELOG.md  README.md  README.zh-CN.md  pubspec.yaml
getquery/example/: getquery_example.dart
getquery/lib/: getquery.dart
getquery/test/: use_query_test.dart  (+1 more)
getx-query/: .gitignore  .last_build_id  ARCHITECTURE.md  CHANGELOG.md  README.md  README.zh-CN.md  flutter_bootstrap.js  index.html  main.dart.js  manifest.json  pubspec.yaml  version.json
layerman/: .last_build_id  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  flutter_bootstrap.js  index.html  main.dart.js  manifest.json  pubspec.yaml  version.json
overlaymanager/: CHANGELOG.md  CLAUDE.md  README.md  pubspec.yaml
roadmap/: ARCHITECTURE.md  CHANGELOG.md  README.md  README.zh-CN.md  pubspec.yaml
roadsman/: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  pubspec.yaml
stompsocket/: .last_build_id  flutter_bootstrap.js  index.html  main.dart.js  version.json
(+344 files in other folders)
